feat(tailwind): Add tailwindcss into the project

--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,8 @@
               "src/assets"
             ],
             "styles": [
+              "src/assets/scss/material-custom.scss",
+              "src/assets/scss/tailwind.scss",
               "src/styles.scss"
             ],
             "scripts": []
