--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "ng": "ng",
     "start": "ng serve --open",
     "build": "NODE_ENV=production ng build --prod",
-    "test": "ng test",
+    "test": "npx jest",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "npx cypress open"
   },
   "private": true,
   "dependencies": {
@@ -30,16 +30,15 @@
     "@angular/cli": "~11.2.1",
     "@angular/compiler-cli": "~11.2.1",
     "@types/jasmine": "~3.6.0",
+    "@types/jest": "^27.4.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "cypress": "^9.4.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "jest": "^27.5.0",
+    "jest-preset-angular": "^11.1.0",
     "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
     "tailwindcss": "^3.0.18",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
