--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open",
-    "build": "NODE_ENV=production ng build --prod",
+    "build": "NODE_ENV=production ng build --configuration production",
     "test": "npx jest",
     "lint": "ng lint",
     "e2e": "npx cypress open"
@@ -16,24 +16,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.1",
+    "@angular/animations": "~12.2.16",
     "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.2.1",
-    "@angular/compiler": "~11.2.1",
-    "@angular/core": "~11.2.1",
-    "@angular/forms": "~11.2.1",
+    "@angular/compiler": "~12.2.16",
+    "@angular/core": "~12.2.16",
+    "@angular/forms": "~12.2.16",
     "@angular/material": "^11.2.13",
-    "@angular/platform-browser": "~11.2.1",
-    "@angular/platform-browser-dynamic": "~11.2.1",
-    "@angular/router": "~11.2.1",
+    "@angular/platform-browser": "~12.2.16",
+    "@angular/platform-browser-dynamic": "~12.2.16",
+    "@angular/router": "~12.2.16",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.1",
-    "@angular/cli": "~11.2.1",
-    "@angular/compiler-cli": "~11.2.1",
+    "@angular-devkit/build-angular": "~12.2.16",
+    "@angular/cli": "~12.2.16",
+    "@angular/compiler-cli": "~12.2.16",
     "@types/jasmine": "~3.6.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^12.11.1",
@@ -47,6 +47,6 @@
     "tailwindcss": "^3.0.18",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.2"
+    "typescript": "~4.3.5"
   }
 }
