--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -6,7 +6,8 @@
       "jest",
       "node"
     ],
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "emitDecoratorMetadata": true
   },
   "files": [
     "src/test.ts",
