--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open",
-    "build": "NODE_ENV=production ng build --prod",
+    "build": "NODE_ENV=production ng build --configuration production",
     "test": "npx jest",
     "lint": "ng lint",
     "e2e": "npx cypress open"
@@ -16,25 +16,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.1",
-    "@angular/cdk": "^11.2.13",
-    "@angular/common": "~11.2.1",
-    "@angular/compiler": "~11.2.1",
-    "@angular/core": "~11.2.1",
-    "@angular/forms": "~11.2.1",
-    "@angular/material": "^11.2.13",
-    "@angular/platform-browser": "~11.2.1",
-    "@angular/platform-browser-dynamic": "~11.2.1",
-    "@angular/router": "~11.2.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "@angular/cdk": "~13.2.0",
+    "@angular/material": "~13.2.0",
+    "@angular/animations": "~13.2.0",
+    "@angular/common": "~13.2.0",
+    "@angular/compiler": "~13.2.0",
+    "@angular/core": "~13.2.0",
+    "@angular/forms": "~13.2.0",
+    "@angular/platform-browser": "~13.2.0",
+    "@angular/platform-browser-dynamic": "~13.2.0",
+    "@angular/router": "~13.2.0",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.1",
-    "@angular/cli": "~11.2.1",
-    "@angular/compiler-cli": "~11.2.1",
-    "@types/jasmine": "~3.6.0",
+    "@angular-devkit/build-angular": "~13.2.2",
+    "@angular/cli": "~13.2.2",
+    "@angular/compiler-cli": "~13.2.0",
+    "@types/jasmine": "~3.10.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -47,6 +47,6 @@
     "tailwindcss": "^3.0.18",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.2"
+    "typescript": "~4.5.2"
   }
 }
