--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/jasmine": "~3.10.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^12.11.1",
+    "autoprefixer": "^10.4.2",
     "codelyzer": "^6.0.0",
     "cypress": "^9.4.1",
     "jasmine-core": "~3.6.0",
@@ -43,6 +44,7 @@
     "jest": "^27.5.0",
     "jest-preset-angular": "^11.1.0",
     "karma-coverage": "~2.0.3",
+    "postcss": "^8.4.6",
     "tailwindcss": "^3.0.18",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
