--- a/.github/workflows/azure-deployment.yml
+++ b/.github/workflows/azure-deployment.yml
@@ -1,13 +1,15 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js to Azure
+name: Build and deploy Node.js app to Azure Web App
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
+
+env:
+  AZURE_WEBAPP_NAME: orion-salama-front
+  AZURE_WEBAPP_PACKAGE_PATH: './dist/ng-material-tailwind'
+  NODE_VERSION: '16.x'
 
 jobs:
   build:
@@ -16,10 +18,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Node.js version
+      - name: Set up Node.js ${{env.NODE_VERSION}}
         uses: actions/setup-node@v1
         with:
-          node-version: '16.x'
+          node-version: ${{env.NODE_VERSION}}
 
       - name: npm install, build, and test
         run: |
@@ -31,7 +33,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: ${{env.AZURE_WEBAPP_PACKAGE_PATH}}
 
   deploy:
     runs-on: ubuntu-latest
@@ -50,7 +52,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'orion-salama-front'
+          app-name: ${{env.AZURE_WEBAPP_NAME}}
           slot-name: 'production'
-          publish-profile: ${{ secrets.AzureAppService_PublishProfile_d32f3f5107e34c949a96a00d5a5effaf }}
-          package: .
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6E17279C3C514ABDB2A53B82B4BD0C9B }}
+          package: ${{env.AZURE_WEBAPP_PACKAGE_PATH}}
