Update build path destination

--- a/.github/workflows/azure-deployment.yml
+++ b/.github/workflows/azure-deployment.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: ${{env.AZURE_WEBAPP_PACKAGE_PATH}}
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
