--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve --open",
     "build": "NODE_ENV=production ng build --configuration production",
     "test": "npx jest",
-    "e2e": "npx cypress open"
+    "e2e": "npx cypress open",
+    "lint": "ng lint"
   },
   "author": {
     "email": "bazieambroise@gmail.com",
@@ -31,14 +32,22 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.2",
+    "@angular-eslint/builder": "13.1.0",
+    "@angular-eslint/eslint-plugin": "13.1.0",
+    "@angular-eslint/eslint-plugin-template": "13.1.0",
+    "@angular-eslint/schematics": "13.1.0",
+    "@angular-eslint/template-parser": "13.1.0",
     "@angular/cli": "~13.2.2",
     "@angular/compiler-cli": "~13.2.0",
     "@types/jasmine": "~3.10.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "5.11.0",
+    "@typescript-eslint/parser": "5.11.0",
     "autoprefixer": "^10.4.2",
     "codelyzer": "^6.0.0",
     "cypress": "^9.4.1",
+    "eslint": "^8.2.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "jest": "^27.5.0",
