--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,4 @@ jobs:
     - run: npm install
     - run: npm run build --if-present
     - run: npm run test --if-present
+    - run: npm run lint --if-present
