--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,7 @@
           }
         ],
         "@typescript-eslint/no-inferrable-types": "error",
-        "@typescript-eslint/member-ordering": "error",
+        "@typescript-eslint/member-ordering": "warn",
         "@angular-eslint/no-empty-lifecycle-method": "error",
         "@typescript-eslint/explicit-module-boundary-types": "off",
         "array-bracket-spacing": ["error", "never"],
