--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -76,7 +76,7 @@
         "no-sequences": "error",
         "no-tabs": "error",
         "no-trailing-spaces": "error",
-        "no-underscore-dangle": "warn",
+        "no-underscore-dangle": "off",
         "no-useless-constructor": "warn",
         "no-useless-rename": "error",
         "no-useless-return": "error",
