feat(config): Add development build configuration

--- a/angular.json
+++ b/angular.json
@@ -62,6 +62,14 @@
                   "maximumError": "4kb"
                 }
               ]
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
             }
           }
         },
@@ -73,8 +81,12 @@
           "configurations": {
             "production": {
               "browserTarget": "ng-material-tailwind:build:production"
+            },
+            "development": {
+              "browserTarget": "ng-material-tailwind:build:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
