--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm install @angular/cli@latest
-    - run: npm install
+    - run: npm ci
     - run: npm run build --if-present
     - run: npm run test --if-present
     - run: npm run lint --if-present
