--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open",
-    "build": "NODE_ENV=production ng build --configuration production",
+    "build": "cross-env NODE_ENV=production ng build --configuration production",
     "test": "npx jest",
     "e2e": "npx cypress open",
     "lint": "ng lint"
@@ -16,13 +16,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "~13.2.0",
-    "@angular/material": "~13.2.0",
     "@angular/animations": "~13.2.0",
+    "@angular/cdk": "~13.2.0",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
+    "@angular/material": "~13.2.0",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
@@ -45,6 +45,7 @@
     "@typescript-eslint/parser": "5.11.0",
     "autoprefixer": "^10.4.2",
     "codelyzer": "^6.0.0",
+    "cross-env": "^7.0.3",
     "cypress": "^9.4.1",
     "eslint": "^8.2.0",
     "jest": "^27.5.0",
