upgrade angular version to 14

--- a/angular.json
+++ b/angular.json
@@ -106,8 +106,9 @@
       }
     }
   },
-  "defaultProject": "ng-material-tailwind",
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
